--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="capa_ebook.jpg" alt="Capa do eBook" class="capa animate" />
       <h1 class="title">Homem de Respeito</h1>
       <p class="subtitle">A Jornada Para o Sucesso e Autoridade</p>
-      <a href="#" class="btn-compra" onclick="alertaCompra()">💳 Comprar Agora</a>
+      <a href="https://pay.kiwify.com.br/2iYOJTB" class="btn-compra">💳 Comprar Agora</a>
     </div>
   </header>
 
